Fix paddings on mobile phones

--- a/static/styles.css
+++ b/static/styles.css
@@ -3,6 +3,7 @@
     font-family: "Rubik", sans-serif;
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 
 .content > *:not(:last-child) {
@@ -14,6 +15,9 @@
     width: 100%;
     margin-left: auto;
     margin-right: auto;
+}
+.container.with-x-padding {
+    padding: 0 1rem;
 }
 /* --- Utilities end --- */
 
